--- a/src/style.css
+++ b/src/style.css
@@ -2273,6 +2273,7 @@ textarea.w-select {
 .box-img-meme-title {
 	position: relative;
 	margin-bottom: 28px;
+	min-height: 626px;
 }
 
 .heading-2 {
@@ -2325,7 +2326,7 @@ textarea.w-select {
 
 @media screen and (max-width: 991px) {
 	.section-2 {
-		position: absolute;
+		/* position: absolute; */
 	}
 	.heading-2.text-top {
 		margin-top: 47px;
